# ganit

./: .classpath  .gitignore  .project  README.md  publish_commands.md
bf/: 42.bf  README.md  bf_tutorial.md  test.bf
c/: README.md
dos/: README.md
dotnet/ganit/: Parser.cs  Program.cs  README.md  Token.cs  Tokenizer.cs  ganit.0.0.1.nupkg  ganit.0.2.0.nupkg  ganit.nuspec
ganit/: program.gnt  samples.gnt
java/ganit/: .project  pom.xml  pom.xml.versionsBackup  program.ganit  release.properties
java/ganit-2/: README.md  pom.xml  pom.xml.releaseBackup  release.properties
java/ganit-2/src/main/java/in/palashkantikundu/ganit/: Ganit.java
java/ganit/ganit/: pom.xml  release.properties
java/ganit/ganit/src/main/java/in/palashkantikundu/ganit/: App.java
java/ganit/ganit/src/test/java/in/palashkantikundu/ganit/: AppTest.java
java/ganit/src/main/java/in/palash90/ganit/: App.java  Ganit.java
java/ganit/src/main/java/in/palash90/ganit/analyzer/: Lexer.java  (+3 more)
java/ganit/src/test/java/in/palash90/ganit/: AppTest.java  GanitTest.java
java/ganit/src/test/java/in/palashkantikundu/ganit/: GanitTest.java
js/: README.md  index.js  package.json
python/: README.md  setup.py
rust/: README.md
rust/ganit/: Cargo.toml  program.gnt
rust/ganit/src/: lib.rs  main.rs
rust/ganit/src/parser/: mod.rs  token.rs
sh/: README.md
swift/ganit/: Package.swift  README.md
swift/ganit/Sources/ganit/: ganit.swift
swift/ganit/Tests/: LinuxMain.swift
swift/ganit/Tests/ganitTests/: XCTestManifests.swift  ganitTests.swift
tutorial/: Cargo.toml
tutorial/src/: vars.rs
(+4 files in other folders)
